stylesheets/common_.css
body {
    margin: 0;
    padding: 0;
    font-size: 9pt;
    font-family: sans-serif, Arial, Helvetica;
    color: #444444;
    line-height: 125%;
    min-width: 900px;
}

h1 {
	font-size: 16pt;
	color: #354b35;
	padding-top: 10px;
	font-weight: normal;
	font-style: normal;
}

h2 {
	font-size: 12pt;
	font-weight: normal;
	font-style: italic;
	color: #354b35;
	padding-top: 10px;
}

img {
	border-width : 0px;
}

/* Custom */

.Error {
	color: #a81a1a;
	font-weight: bold;
	font-style: italic;
}

#pagewrapper {
    width: 100%;
    margin: 0px auto;
    padding: 0;
    border: none;
}
#content {
    padding: 12px 20px;
    clear: both;
}

#content .main {
	float: left;
	width: 72%; 
}

#content .sidebar {
	float: right;
	width: 25%;
}

#content .column1 {
	float: left;
	width: 38%;
}

#content .column2 {
	float: right;
	width: 58%;
}

#header {
    background-color: white;
    background-image: url('/images/headerbg.png');
    height: 88px;
    margin: 0;
    padding: 12px 20px;
    font-size: 8pt;
    text-align: right;
}

#header .logo {
	float: left;
	height: 88px;
}

#header input {
	width: 120px;
	border: 1px solid #BBBBBB;
	background: transparent;
}

#header .LoginButton {
	display: inline
}

#header .LoginButton input {
	width: 50px;
	border: 1px solid #BBBBBB;
	background-color: transparent;
	color: #444444;
}

#header .SearchBox {
	float: bottom;
	margin-top: 30px;
}


#header label {
	display:inline;
	font-style: italic;
	font-weight: normal;
}

#footer {
    clear:both;
    text-align: center;
    color: #999999;
    font-size: 7pt;
    padding: 12px 20px;
}

#footer .Item {
	display: inline;
	padding: 0px 3px;
}

#footer a:link 		{ color: #999999; }
#footer a:visited	{ color: #999999; }
#footer a:hover 	{ color: #608060; }
#footer a:active 	{ color: #999999; }


.Listing table {
	border-spacing : 0;
	min-width: 500px;
}

.Listing td {
	padding: 3px 12px;
}

.Listing tr:nth-child(even) {
	background: #efefef;
}

.Back a:link 	{ color: #999999; }
.Back a:visited	{ color: #999999; }
.Back a:hover 	{ color: #608060; }
.Back a:active 	{ color: #999999; }

.Back {
	color: #999999;
	font-size: 7pt;
}

.IssueTitle {
	font-weight : bold;
	display: inline;
}

.CommentHeader {
	font-size: 7pt;
	font-style: italic;
	color: #999999;
}

.CommentHeader a:link 	{ color: #999999; }
.CommentHeader a:visited{ color: #999999; }
.CommentHeader a:hover 	{ color: #608060; }
.CommentHeader a:active { color: #999999; }

.CommentText {
	margin-left: 10px;
}

.Block {
	-moz-border-radius: 6px;
	-webkit-border-radius: 6px;
	
	-moz-box-shadow: 2px 2px 4px #EEEEEE;
	-webkit-box-shadow: 2px 2px 4px #EEEEEE;
	
	border: 1px solid #EEEEEE;
	background: #FAFAFA;
	margin: 20px 30px 20px 0px;
	padding: 0px 10px 0px 10px;
}

form { 
  display : inline;
}

hr {
	color: #999999;
	background-color: #999999;
	height: 1px;
}

table {
	border-spacing : 0;
}

td {
	padding: 2px 10px;
}

textarea { 
	height : 5em;
	width : 95%;
	height : 25em;
	-moz-border-radius: 4px;
	-webkit-border-radius: 4px;
	border: 1px solid #BBBBBB;
}

select {
	width : 30em;
	-moz-border-radius: 4px;
	-webkit-border-radius: 4px;
	border: 1px solid #BBBBBB;
}

input[type="text"]{
	width : 30em;
	-moz-border-radius: 4px;
	-webkit-border-radius: 4px;
	border: 1px solid #BBBBBB;
}

input[type="file"]{
	width : 21em;
	-moz-border-radius: 4px;
	-webkit-border-radius: 4px;
	border: 1px solid #BBBBBB;
}

a:link 		{ color: #444444; }
a:visited	{ color: #444444; }
a:hover 	{ color: #354b35; }
a:active 	{ color: #444444; }

label {
	display:block;
	margin-bottom:0.1em;
	margin-top:1em;
	font-size: 8pt;
	font-style: italic; 
	font-weight: bold;
}

.TagAddition input[type="text"] {
	width : 100px;
}

.TagAddition .Suggestion {
	display: block;
	margin: 4px;
}

.TagAddition .Suggestion a {
	padding: 0px;
	margin: 5px;
	text-indent: 5px;
	font-size: 8pt;
}

.TagAddition .Suggestion a:link 	{ color: #999999; }
.TagAddition .Suggestion a:visited	{ color: #999999; }
.TagAddition .Suggestion a:hover 	{ color: #608060; }
.TagAddition .Suggestion a:active 	{ color: #999999; }

.Tags {
	font-size: 8pt;
	font-style: italic;
	color: #b4b252;
	display: inline;
	line-height: 170%;
}

.Tag {
	display: inline;
	-moz-border-radius: 4px;
	-webkit-border-radius: 4px;
	
	border: 1px solid #deddb2;
	background: #ebebd1;
	
	padding: 1px 3px 1px 3px;
	margin: 0px 2px;
}

.Tag .Delete {
	font-size: 6pt;
	display: inline;
	padding-left: 0px;
	padding-right: 8px;
}

.Tag .Delete a {
	padding-left: 1px;
	padding-right: 0px;
}

.Tag a {
	padding-left: 4px;
	padding-right: 4px;
	display: inline;
}

.Tag a:link 	{ color: #bdb947; text-decoration: none; }
.Tag a:visited	{ color: #bdb947; text-decoration: none; }
.Tag a:hover 	{ color: #bdb947; text-decoration: none; }
.Tag a:active 	{ color: #bdb947; text-decoration: none; }

.ReleaseTag {
	border: 1px solid #b2cdde;
	background: #d1e1eb;
}

.ReleaseTag a:link 		{ color: #488fbc; }
.ReleaseTag a:visited	{ color: #488fbc; }
.ReleaseTag a:hover 	{ color: #488fbc; }
.ReleaseTag a:active 	{ color: #488fbc; }

.RedTag {
	border: 1px solid #deb2b2;
	background: #ebd1d1;
}

.RedTag a:link 		{ color: #bc4848; }
.RedTag a:visited	{ color: #bc4848; }
.RedTag a:hover 	{ color: #bc4848; }
.RedTag a:active 	{ color: #bc4848; }

.GreenTag {
	border: 1px solid #b2deb7;
	background: #d1ebd4;
}

.GreenTag a:link 	{ color: #48bc56; }
.GreenTag a:visited	{ color: #48bc56; }
.GreenTag a:hover 	{ color: #48bc56; }
.GreenTag a:active 	{ color: #48bc56; }

.GreyTag {
	border: 1px solid #c8c8c8;
	background: #dedede;
}

.GreyTag a:link 	{ color: #828282; }
.GreyTag a:visited	{ color: #828282; }
.GreyTag a:hover 	{ color: #828282; }
.GreyTag a:active 	{ color: #828282; }

.IssueSuggestions {
	margin-bottom: 30px;
	text-indent: 20px;
	font-size: 8pt;
}

.IssueMoveTargets {
	margin-left: 20px;
	font-size: 8pt;
}

